--- a/app/views/organization/viewpromotioncode.html
+++ b/app/views/organization/viewpromotioncode.html
@@ -3,13 +3,13 @@
     <div class="paddedbottom10">
 		<ul class="breadcrumb">
 	        <li><a href="#/organization">{{'link.admin.organisation' | translate}}</a> <span class="divider">/</span></li>
-	        <li><a href="#/discounts">{{'label.managediscounts' | translate}}</a> <span class="divider">/</span></li>
+	        <li><a href="#/discounts" ng-click="changeToSameTab()">{{'label.managediscounts' | translate}}</a> <span class="divider">/</span></li>
 	        <li class="active">{{'label.viewPromotioncode' | translate}}</li>
 	    </ul>
 	    <div class="pull-right">
 	      <div class="btn-group">
 	          <a href="#/editpromotioncode/{{promotiondata.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> {{'button.edit' | translate}}</a>	        
-	          <a ng-click="deletemessage()" class="btn btn-primary"><i class="icon-trash icon-white"></i> {{'button.delete' | translate}}</a>
+	          <a ng-click="deletePromotion()" class="btn btn-primary"><i class="icon-trash icon-white"></i> {{'button.delete' | translate}}</a>
 	      </div>
 	    </div>
 	</div>
