--- a/app/views/tickets/assignedtickets.html
+++ b/app/views/tickets/assignedtickets.html
@@ -1,4 +1,4 @@
-
+ <h3>Assigned Tickets</h3>
     <div class="row-fluid" ng-controller="AssignedTicketController">
     <form ng-submit="searchTickets()">
     <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by clientName">
