--- a/app/views/organization/viewplan.html
+++ b/app/views/organization/viewplan.html
@@ -8,12 +8,26 @@
 	    <div class="pull-right">
 	      <div class="btn-group">
 	          <a href="#/editplan/{{plan.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
-	         <a ng-click="deleteplan()" class="btn btn-primary"><i class="icon-trash icon-white"></i> Delete</a>
+	         <a data-ng-click="deleteplan()" class="btn btn-primary"><i class="icon-trash icon-white"></i> Delete</a>
 	         <a href="#/prices/{{plan.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> View Price</a>
 	         <a href="#/createprice/{{plan.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Add Price</a>
 	      </div>
 	    </div>
 	</div>
+	
+	<script type="text/ng-template" id="approve.html">
+                    <div class="modal-header silver">
+                        <h3 class="bolder">{{'dialog.item.title.message' | translate}}</h3>
+                    </div>
+                    <div class="modal-body modal-big">
+                       <h4>Are you sure?</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+                        <button class="btn btn-primary" ng-click="approve(date.actDate)">{{'label.confirm' | translate}}</button>
+                    </div>
+      </script>
+	
 	<div class="row paddedleft">
 		<h3>{{contractperiod.name}}</h3>
 		<table width="100%">
