--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -173,7 +173,7 @@
      
           <div class="offset3">
             <a href="#/viewclient/{{clientId}}"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button click-once="Loading" type="submit"  class="btn btn-primary">Save</button>
           </div>
         </fieldset>
          
