--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -48,6 +48,10 @@
 	         <a ng-show="orderData.isPrepaid == 'Y'"  href="" ng-click="orderRenew(orderPriceDatas[0].orderId)"class="btn btn-primary"><i class="icon-arrow-up icon-white"></i>TopUp</a>
 	        <!--  <a ng-show="orderData.status == 'ACTIVE'" ng-click="CommandCenter(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Command Center</a> -->
 	         <a ng-show="orderData.status == 'PENDING'" ng-click="cancel()" class="btn btn-primary"><i class="icon-remove-circle icon-white"></i> Cancel</a>
+	         <a ng-show ="association.orderId == null"  href="#/association/{{clientId}}/{{orderPriceDatas[0].orderId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Pairing</a>
+		     <a ng-show ="orderData.status == 'DISCONNECTED' && association.orderId != null" ng-click="deAssociation()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Un Pairing</a>
+		     <a ng-show  ="flag == true" href="#/hardwareswap/{{association.saleId}}/{{clientId}}/{{association.orderId}}" class="btn btn-primary"><i class="icon-move"></i>Hardware Swap</a>
+		     <a href="#/neworder/{{orderData.pdid}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
 	      
 	      <span  class="btn-group">
               <a class="btn btn-primary dropdown-toggle" ng-show="orderData.status == 'ACTIVE'">
@@ -75,31 +79,56 @@
           </span> 
 
 	    </div><hr/>
-
+<label><b>Order Info</b></label>
 <div>
-<div class="row-fluid span" style="margin-left:-1px;margin-top: -20px">
+
+<div class="row-fluid span">
 
 		<div class="span6">
-		<table width="100%" class="table table-striped table-bordered">
+		<table width="100%" class="table table-striped table-bordered" width="0px">
 			<tr>
-				<td width="30%">{{ 'label.plan.plancode' | translate }}</td>
-				<td width="70%">{{orderData.planCode}}</td>
+				<td width="50%">{{ 'label.order.orderId' | translate }}</td>
+				<td width="50%">{{orderData.planCode}}</td>
 			</tr>
 			<tr>
 				<td width="30%">{{ 'label.order.contractperiod' | translate }}</td>
 				<td width="70%">{{orderData.contractPeriod}}</td>
 			</tr>
 			<tr>
-				<td width="30%">{{ 'label.order.status' | translate }}</td>
+				<td width="30%">{{ 'label.plan.isprepaid' | translate }}</td>
+				<td width="70%">{{formData.isPrepaid}}</td>
+			</tr>
+			<tr>
+				<td width="30%">{{ 'label.order.ordertype' | translate }}</td>
+				<td width="70%">{{orderData.userAction}}</td>
+			</tr>
+			<tr>
+				<td width="30%">{{ 'table.order.billingcycle' | translate }}</td>
+				<td width="70%">{{orderPriceDatas[0].billingCycle}}</td>
+			</tr>
+		</table>
+	</div>	
+	<div class="span5">
+		<table width="100%" class="table table-striped table-bordered">
+			<tr>
+				<td width="30%">{{ 'label.plan.planname' | translate }}</td>
+				<td width="70%">{{orderData.planCode}}</td>
+			</tr>
+			<tr>
+				<td width="30%">{{ 'table.order.status' | translate }}</td>
 				<td width="70%">{{orderData.status}}</td>
+			</tr>
+			<tr>
+				<td width="30%">{{ 'table.order.endDate' | translate }}</td>
+				<td width="70%">{{orderData.endDate | DateFormat}}</td>
 			</tr>
 			<tr>
 				<td width="30%">{{ 'label.order.useraction' | translate }}</td>
 				<td width="70%">{{orderData.userAction}}</td>
 			</tr>
 			<tr>
-				<td width="30%">{{ 'label.plan.isprepaid' | translate }}</td>
-				<td width="70%">{{orderData.isPrepaid}}</td>
+				<td width="30%">{{ 'table.order.invoicetilldate' | translate }}</td>
+				<td width="70%">{{orderPriceData.invoiceTillDate| DateFormat}}</td>
 			</tr>
 		</table>
 	</div>			
@@ -108,47 +137,6 @@
 <div class="row paddedleft">
   <hr class="marginbottom"/>
     <tabset >	
-      <tab heading="Order Info">
-      	<div class="span8" style="margin-left: 10px;margin-top: 30px;"> 
-            <table class="table table-bordered view-table">
-            	
-                <tr>
-                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.id' | translate }}</td>
-                  <td><span class="padded-td">{{orderData.id}}</span></td>
-                </tr>
-                <tr>
-                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.price' | translate }}</td>
-                  <td><span class="padded-td">{{orderData.price}}</span></td>
-                </tr>
-                <tr>
-                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.status' | translate }}</td>
-                  <td><span class="padded-td">{{orderData.status}}</span></td>
-                </tr>
-                <tr>
-                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.startDate' | translate }}</td>
-                  <td><span class="padded-td">{{orderData.startDate | DateFormat}}</span></td>
-                </tr>
-                <tr>
-                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.currentDate' | translate }}</td>
-                  <td><span class="padded-td">{{orderData.currentDate | DateFormat}}</span></td>
-                </tr>
-                <tr>
-                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.cancelledStatus' | translate }}</td>
-                  <td><span class="padded-td">{{orderData.cancelledStatus}}</span></td>
-                </tr>
-                <tr>
-                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.contractPeriod' | translate }}</td>
-                  <td><span class="padded-td">{{orderData.contractPeriod}}</span></td>
-                </tr>
-                <tr>
-                  <td style="font-weight: normal" class="table-bold-ord">{{ 'table.order.provisioningSys' | translate }}</td>
-                  <td><span class="padded-td">{{orderData.provisioningSys}}</span></td>
-                </tr>
-                
-            </table>
-          </div>
-      </tab>
-      
       <tab heading="Order Services">
       <div> 
             <table class="table">
@@ -156,24 +144,24 @@
             <tr class="graybg">
                 <th>{{ 'table.order.id' | translate }}</th>
                 <th>{{ 'table.order.servicecode' | translate }}</th>
-                <th>{{ 'table.order.serviceDescription' | translate }}</th>
                 <th>{{ 'table.order.serviceType' | translate }}</th>
+                <th>{{ 'table.order.serviceDescription' | translate }}</th>
+                <th>{{ 'table.order.pairing' | translate }}</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="orderServicesData in orderServicesData">
                 <td>{{orderServicesData.id}}</td>            
                 <td>{{orderServicesData.servicecode}}</td>        
-                <td>{{orderServicesData.serviceDescription}}</td>
                 <td>{{orderServicesData.serviceType}}</td>
+                <td>{{orderServicesData.serviceDescription}}</td>
+                <td>{{association.serialNum}}</td>
             </tr>
         </tbody>
     </table>
     </div>
       </tab>
-      
-      
-		 <tab heading="Pricing" >
+ <tab heading="Price & Discount" >
           <div> 
             <table class="table">
         <thead>
@@ -203,43 +191,8 @@
             </tr>
         </tbody>
     </table>
-    </div>
-        </tab>
-	
-	<tab heading="Pairing" >
-	<div class="row-fluid " >
-   <div id="msg"></div> 
-    <div class="pull-right">
-		         <a ng-show ="orderData.status == 'PENDING' && association.orderId == null"  href="#/association/{{clientId}}/{{orderPriceDatas[0].orderId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Pairing</a>
-		         <a ng-show ="orderData.status == 'DISCONNECTED' && association.orderId != null" ng-click="deAssociation()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Un Pairing</a>
-		        <a ng-show  ="flag == true" href="#/hardwareswap/{{association.saleId}}/{{clientId}}/{{association.orderId}}" class="btn btn-primary"><i class="icon-move"></i>Hardware Swap</a>
-	        </div>
-	<table class="table">
-        <thead>
-            <tr class="graybg">
-                <th>Order Id</th>
-                <th>Plan Code</th>
-                <th>Item Code</th>
-                <th>Serial Number</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tbody>
-            <tr>                 
-                <td>{{association.orderId}}</a></td>
-                <td>{{association.planCode}}</a></td>
-                <td>{{association.itemCode}}</td>
-                <td>{{association.serialNum}}</td>
-            </tr>
-        </tbody>
-        </tbody>
-    </table>
-</div>
-	</tab>
-	
-	 <tab heading="Discount">
-	 <div> 
-            <table class="table">
+    <lable><b>Discount</b></lable>
+    <table class="table">
         <thead>
             <tr class="graybg">
                 <th>{{ 'table.order.id' | translate }}</th>
@@ -260,26 +213,28 @@
         </tbody>
     </table>
     </div>
-      </tab>
-	
-	<tab heading="History">
+        </tab>
+
+
+	<tab heading="Order Transaction">
 	<div class="row-fluid ">
     
 	<table class="table">
         <thead>
             <tr class="graybg">
-                <th>{{ 'table.order.transactiondate' | translate }}</th>
-                <th>{{ 'table.order.actualdate' | translate }}</th>
-                <th>{{ 'table.order.processorderid' | translate }}</th>
-                <th>{{ 'table.order.transactiontype' | translate }}</th>
+                 <th>{{ 'table.order.processorderid' | translate }}</th>
+                 <th>{{ 'table.order.transactiondate' | translate }}</th>
+                 <th>{{ 'table.order.transactiontype' | translate }}</th>
+                 <th>{{ 'table.order.actualdate' | translate }}</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="orderHistory in orderHistorydata">
-                <td>{{orderHistory.transactionDate | DateFormat}}</td>            
+                <td>{{orderHistory.PrepareRequsetId}}</td>
+                <td>{{orderHistory.transactionDate | DateFormat}}</td>
+                <td>{{orderHistory.transactioType}}</td>            
                 <td>{{orderHistory.actualDate | DateFormat}}</td>        
-                <td>{{orderHistory.PrepareRequsetId}}</td>         
-                <td>{{orderHistory.transactioType}}</td>
+                
                 
             </tr>
         </tbody>
