changes for sale and messages bugs

--- a/app/views/clients/addonetimesale.html
+++ b/app/views/clients/addonetimesale.html
@@ -57,7 +57,7 @@
 								<div class="control-group">
             					<label class="control-label" for="chargeCode">{{ 'label.chargeCode' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="chargeCode" ng-model="formData.chargeCode">
+              					<input type="text" id="chargeCode" ng-model="formData.chargeCode" style="background-color:#FFFFFF;" readonly>
             					</div>
           						</div>
 							</td>
@@ -76,7 +76,7 @@
 								<div class="control-group">
             					<label class="control-label" for="totalPrice">{{ 'label.totalPrice' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="totalPrice" ng-model="formData.totalPrice">
+              					<input type="text" id="totalPrice" ng-model="formData.totalPrice" style="background-color:#FFFFFF;" readonly>
             					</div>
           						</div>
 							</td>
@@ -94,7 +94,7 @@
 								<div class="control-group">
             					<label class="control-label" for="unitPrice">{{ 'label.unitPrice' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="unitPrice" ng-model="formData.unitPrice">
+              					<input type="text" id="unitPrice" ng-model="formData.unitPrice" style="background-color:#FFFFFF;" readonly>
             					</div>
           						</div>
 								</td>
