--- a/app/views/clients/addonetimesalewizard.html
+++ b/app/views/clients/addonetimesalewizard.html
@@ -22,7 +22,7 @@
 								<div class="control-group">
             					<label class="control-label" for="chargeCode">{{ 'label.chargeCode' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="chargeCode" ng-model="formData2.chargeCode">
+              					<input type="text" id="chargeCode" ng-model="formData2.chargeCode" style="background-color:#FFFFFF;" readonly>
             					</div>
           						</div>
 							</td>
@@ -41,7 +41,7 @@
 								<div class="control-group">
             					<label class="control-label" for="totalPrice">{{ 'label.totalPrice' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="totalPrice" ng-model="formData2.totalPrice">
+              					<input type="text" id="totalPrice" ng-model="formData2.totalPrice" style="background-color:#FFFFFF;" readonly>
             					</div>
           						</div>
 							</td>
@@ -59,7 +59,7 @@
 								<div class="control-group">
             					<label class="control-label" for="unitPrice">{{ 'label.unitPrice' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="unitPrice" ng-model="formData2.unitPrice">
+              					<input type="text" id="unitPrice" ng-model="formData2.unitPrice" style="background-color:#FFFFFF;" readonly>
             					</div>
           						</div>
 								</td>
