--- a/app/views/organization/message.html
+++ b/app/views/organization/message.html
@@ -4,7 +4,7 @@
         <li class="active">{{'label.managemessage' | translate}}</li>
     </ul>
     <div class="pull-right">
-        <a href="#/createMessage" class="btn btn-primary"><i class="icon-plus icon-white"></i> message</a>
+        <a href="#/createMessage" class="btn btn-primary"><i class="icon-plus icon-white"></i> Add Message</a>
     </div>
 </div>
 
