--- a/app/views/clients/addonetimesalewizard.html
+++ b/app/views/clients/addonetimesalewizard.html
@@ -13,7 +13,7 @@
 								<div class="control-group">
                         		<label class="control-label">{{ 'label.saleDate' | translate }}</label>
                         		<div class="controls">
-                            	<input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.saleDate" is-open="opened2" max="maxDate" 
+                            	<input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.saleDate" is-open="opened2" min="minDateOnTimeSale" max="maxDate" 
                             	date-disabled="disabled(date, mode)"  style="background-color:#FFFFFF;"  readonly/>
                         		</div>
           						</div>
