--- a/app/views/clients/createorderwizard.html
+++ b/app/views/clients/createorderwizard.html
@@ -109,7 +109,7 @@
                       <div class="control-group">
                           <label class="control-label" for="startDate">{{ 'label.order.startdate' | translate }}</label>
                             <div class="controls">
-                          <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="start.date" is-open="opened" min="minDate" max="maxDate" 
+                          <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="start.date" is-open="opened" min="minDateOrder" max="maxDate" 
                           date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
                           </div>
                         </div>
