--- a/app/views/organization/viewpromotioncode.html
+++ b/app/views/organization/viewpromotioncode.html
@@ -3,16 +3,29 @@
     <div class="paddedbottom10">
 		<ul class="breadcrumb">
 	        <li><a href="#/organization">{{'link.admin.organisation' | translate}}</a> <span class="divider">/</span></li>
-	        <li><a href="#/discounts">{{'label.managediscounts' | translate}}</a> <span class="divider">/</span></li>
+	        <li><a href="#/discounts" ng-click="promotionTab()">{{'label.managediscounts' | translate}}</a> <span class="divider">/</span></li>
 	        <li class="active">{{'label.viewPromotioncode' | translate}}</li>
 	    </ul>
 	    <div class="pull-right">
 	      <div class="btn-group">
 	          <a href="#/editpromotioncode/{{promotiondata.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> {{'button.edit' | translate}}</a>	        
-	          <a ng-click="deletemessage()" class="btn btn-primary"><i class="icon-trash icon-white"></i> {{'button.delete' | translate}}</a>
+	          <a ng-click="deletePromotion()" class="btn btn-primary"><i class="icon-trash icon-white"></i> {{'button.delete' | translate}}</a>
 	      </div>
 	    </div>
 	</div>
+	
+	<script type="text/ng-template" id="approve.html">
+                    <div class="modal-header silver">
+                        <h3 class="bolder">{{'dialog.item.title.message' | translate}}</h3>
+                    </div>
+                    <div class="modal-body" style="height:60px;">
+                       <h4>Are you sure?</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+                        <button class="btn btn-primary" ng-click="approve(date.actDate)">{{'label.confirm' | translate}}</button>
+                    </div>
+      </script>
 
 	<div class="row paddedleft">
 					<h3>{{promotiondata.id}}</h3>	
@@ -44,4 +57,4 @@
                           </table>
                       </div>                    
                                      
-    </div>
+  </div>
