--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -174,7 +174,7 @@
           <div class="offset3">
             
                <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
-           <button type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button>
+           <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button>
 
           </div>
         </fieldset>
