--- a/app/views/clients/editAddress.html
+++ b/app/views/clients/editAddress.html
@@ -118,10 +118,9 @@
 			</tr>
 
 		</table>
-		
 		<div class="offset3">
-			<a href="#/viewclient/{{formData.clientId}}"><button type="reset" class="btn">Cancel</button></a>
-			<button type="submit" class="btn btn-primary">Save</button>
+			<a id="cancel" href="#/viewclient/{{formData.clientId}}"><button type="reset" class="btn">Cancel</button></a>
+			<button id="submit" type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
 </form>
