--- a/app/views/clients/newTicket.html
+++ b/app/views/clients/newTicket.html
@@ -101,8 +101,8 @@
 		</table>
 
 		<div class="offset3">
-			<a href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
-			<button type="submit" class="btn btn-primary">Save</button>
+			<a id="cancel" href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
+			<button id="submit" type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
 </form>
