--- a/app/views/inventory/addgrndetails.html
+++ b/app/views/inventory/addgrndetails.html
@@ -57,8 +57,8 @@
 
 
           <div class="offset3">
-            <a href="#/inventory" ><button type="reset" class="btn" ng-click="reset123()">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/inventory" ><button id="cancel" type="reset" class="btn" ng-click="reset123()">{{'button.cancel'| translate}}</button></a>
+            <button id="submit"  type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
