--- a/app/views/inventory/inventory.html
+++ b/app/views/inventory/inventory.html
@@ -10,7 +10,7 @@
        
         <div class="row-fluid">
         <form ng-submit="searchItemDetails(filterText)">
-                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Search by Device#">
         </form>
         <table class="table">
             <thead>
@@ -66,7 +66,7 @@
        
         <div class="row-fluid">
         <form ng-submit="searchGRN(filterText)">
-                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Search by Device#">
        </form>
         <table class="table">
             <thead>
@@ -114,7 +114,7 @@
        
         <div class="row-fluid">
         <form ng-submit="searchMRN(filterText)">
-                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Search by Device#">
         </form>
         <table class="table">
             <thead>
@@ -166,7 +166,7 @@
                   <br/>
                   <div class="row-fluid">
                  <form ng-submit="searchItems(filterText)">
-                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Search by Device#">
                    </form>
 	               <table class="table">
 					<thead>	
@@ -206,7 +206,7 @@
        
         <div class="row-fluid">
         <form ng-submit="searchSupplier(filterText)">
-                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Search by Device#">
        </form>
         <table class="table">
             <thead>
@@ -240,7 +240,7 @@
        
         <div class="row-fluid">
         <form ng-submit="searchHistory(filterText)">
-                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Search by Device#">
         </form>
         <table class="table">
             <thead>
@@ -301,8 +301,8 @@
     </fieldset>
     </div>
      <div class="modal-footer">
-        <button class="btn btn-warning" ng-click="cancelQuality()">{{'button.cancel' | translate}}</button>
-     	<button class="btn btn-primary" ng-click="approveQuality(quality)">{{'label.confirm' | translate}}</button>
+        <button id="cancel" class="btn btn-warning" ng-click="cancelQuality()">{{'button.cancel' | translate}}</button>
+     	<button id="submit" class="btn btn-primary" ng-click="approveQuality(quality)">{{'label.confirm' | translate}}</button>
      </div>
 
 </script>
