--- a/app/views/organization/createpromotioncode.html
+++ b/app/views/organization/createpromotioncode.html
@@ -95,8 +95,8 @@
 			</table>
   			
           <div class="offset3">
-            <a href="#/discounts"><button type="reset" ng-click="reset123()" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/discounts"><button id="cancel" type="reset" ng-click="reset123()" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
