--- a/app/views/paymentgateway/paymentGateway.html
+++ b/app/views/paymentgateway/paymentGateway.html
@@ -21,6 +21,7 @@
                 <th>{{'table.paymentgateway.id' | translate}}</th>    
                 <th>{{'table.paymentgateway.receiptNo' | translate}}</th>  
                 <th>{{'table.paymentgateway.serialNo' | translate}}</th>
+                <th>{{'table.paymentgateway.paymentdate' | translate}}</th>
                 <th>{{'table.paymentgateway.amountPaid' | translate}}</th>
                 <th>{{'table.paymentgateway.phoneno' | translate}}</th>
                 <th>{{'table.paymentgateway.remarks' | translate}}</th>
@@ -35,6 +36,7 @@
                 <td>{{paymentgatewaydata.id}}</td>
                 <td>{{paymentgatewaydata.receiptNo}}</td> 
                 <td>{{paymentgatewaydata.serialNo}}</td>
+                <td>{{paymentgatewaydata.paymentDate | DateFormat}}</td>
                 <td>{{paymentgatewaydata.amountPaid}}</td>
                 <td>{{paymentgatewaydata.phoneNo}}</td>
                 <td>{{paymentgatewaydata.remarks}}</td>
@@ -61,6 +63,7 @@
                 <th>{{'table.paymentgateway.id' | translate}}</th>    
                 <th>{{'table.paymentgateway.receiptNo' | translate}}</th>  
                 <th>{{'table.paymentgateway.serialNo' | translate}}</th>
+                 <th>{{'table.paymentgateway.paymentdate' | translate}}</th>
                 <th>{{'table.paymentgateway.amountPaid' | translate}}</th>
                 <th>{{'table.paymentgateway.phoneno' | translate}}</th>
                 <th>{{'table.paymentgateway.remarks' | translate}}</th>
@@ -75,6 +78,7 @@
                 <td>{{paymentgatewaydata.id}}</td>
                 <td>{{paymentgatewaydata.receiptNo}}</td> 
                 <td>{{paymentgatewaydata.serialNo}}</td>
+                <td>{{paymentgatewaydata.paymentDate | DateFormat}}</td>
                 <td>{{paymentgatewaydata.amountPaid}}</td>
                 <td>{{paymentgatewaydata.phoneNo}}</td>
                 <td>{{paymentgatewaydata.remarks}}</td>
