--- a/app/views/prospects/followprospects.html
+++ b/app/views/prospects/followprospects.html
@@ -55,8 +55,8 @@
 
          
           <div class="offset3">
-            <a href="#/viewprospects/{{prospectsData.id}}"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary" ng-disabled="disable">{{'button.save'| translate}}</button>
+            <a href="#/viewprospects/{{prospectsData.id}}"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary" ng-disabled="disable">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
