--- a/app/views/clients/addownedhardware.html
+++ b/app/views/clients/addownedhardware.html
@@ -84,8 +84,8 @@
             </tr>
           </table>
           <div class="offset3">
-            <a href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a id="cancel" href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
