--- a/app/views/clients/clients.html
+++ b/app/views/clients/clients.html
@@ -9,13 +9,14 @@
 </div>
 <div class="row-fluid" ng-controller="ClientController">
 <form ng-submit="search(filterText)">
-    <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name/acctNo">
+    <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by Account#/Name/Phone/email/Identity/Device#">
 
 </form>
 	<table class="table">
         <thead>
             <tr class="graybg">
                 <th>Name</th>
+                <th>Status</th>
                 <th>Account #</th>
                 <th>Office</th>
                 <th>Serial No</th>
@@ -24,7 +25,8 @@
         </thead>
         <tbody>
             <tr class="pointer-main" ng-repeat="client in clients.currentPageItems  | filter:filterText" >
-                <td class="pointer" data-ng-click="routeTo(client.id)"><i class="icon-stop {{client.status.code | StatusLookup}}"></i>&nbsp;{{client.displayName}}</td>
+                <td class="pointer" data-ng-click="routeTo(client.id)">{{client.displayName}}</td>
+                 <td class="pointer" data-ng-click="routeTo(client.id)"><i class="icon-stop {{client.status.value | StatusLookup}}"></i>&nbsp;{{client.status.value}}</td>
                 <td class="pointer" data-ng-click="routeTo(client.id)">{{client.accountNo}}</td>
                 <td class="pointer" data-ng-click="routeTo(client.id)">{{client.officeName}}</td>
                 <td class="pointer" data-ng-click="routeTo(client.id)">{{client.hwSerialNumber}}</td>
