--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -163,7 +163,7 @@
            </table> 
             <div class="offset3">
               <a href="#/clients"><button id="cancel" type="reset" class="btn">Cancel</button></a>
-              <button id="save" type="submit"  ng-dblclick="dbClick()" ng-disabled="(!createclientform.$valid)||(flag)" class="btn btn-primary">Save</button>
+              <button id="submit" type="submit"  ng-dblclick="dbClick()" ng-disabled="(!createclientform.$valid)||(flag)" class="btn btn-primary">Save</button>
             </div>
         </fieldset>
       </form>
