--- a/app/views/clients/createorder1.html
+++ b/app/views/clients/createorder1.html
@@ -141,10 +141,10 @@
         </fieldset>
          <div class="jw-footer ui-widget-header ui-corner-bottom">
               <div class="jw-buttons ui-helper-clearfix">
-                 <a href="#/clients"><button type="reset" class="btn">Cancel</button></a>
+                 <a href="#/clients"><button id="cancel" type="reset" class="btn">Cancel</button></a>
                  <a href=""><button  class="jw-button-prev btn btn-primary" type="button" ng-show="previous" ng-click="previousStepmain()" style="display: inline-block;">Previous</button></a>
                  
-             <button type="submit" class="jw-button-next btn btn-primary"  ng-show="finish">Finish</button>
+             <button id="submit" type="submit" class="jw-button-next btn btn-primary"  ng-show="finish">Finish</button>
              </div>
           </div>
             
