--- a/app/views/clients/editclient.html
+++ b/app/views/clients/editclient.html
@@ -155,8 +155,8 @@
           </tr>
         </table>
           <div class="offset3">
-            <a href='#/viewclient/{{clientId}}'><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a id="cancel" href='#/viewclient/{{clientId}}'><button type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
           
         </fieldset>
