--- a/app/views/inventory/createmrn.html
+++ b/app/views/inventory/createmrn.html
@@ -81,8 +81,8 @@
 			</table>
 			
           <div class="offset3">
-            <a href="#/inventory"><button type="reset" class="btn" ng-click="reset123()">{{'button.cancel' | translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <a href="#/inventory"><button id="cancel" type="reset" class="btn" ng-click="reset123()">{{'button.cancel' | translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
           
         </fieldset>
