--- a/app/views/prospects/cancelprospects.html
+++ b/app/views/prospects/cancelprospects.html
@@ -24,8 +24,8 @@
             </div>
           </div>
           <div class="offset3">
-            <a href="#/viewprospects/{{prospectsData.id}}"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/viewprospects/{{prospectsData.id}}"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
